k8s-files/istio-security/authentication.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: peer-authentication-data
  namespace: data
spec:
  mtls:
    mode: PERMISSIVE
