k8s-files/istio-security/authorization-policy-to-catalog-data-sender.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: frontend-to-catalog-data-sender
  namespace: data
spec:
  selector:
    matchLabels:
      id:  catalog-data-sender
  action: ALLOW
  rules:
  - from:
    - source:
       
        principals: ["cluster.local/ns/frontend/sa/frontend"]
   
    to:
    - operation:
        methods: ["GET"]
        paths: ["/category/*"]
