k8s-files/istio-security/authorization-policy-to-order-manager.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: frontend-to-order-manager
  namespace: data
spec:
  selector:
    matchLabels:
      id:  order-manager
  action: ALLOW
  rules:
  - from:
    - source:
       
        principals: ["cluster.local/ns/frontend/sa/frontend"]

    to:
    - operation:
        methods: ["GET"]
        paths: ["/orders/*"]
    - operation:
         methods: ["POST"]
         paths: ["/create-order","/order/cancel"]
